fixing overflow on field

--- a/packages/forms/src/templates/ArrayFieldTemplate.scss
+++ b/packages/forms/src/templates/ArrayFieldTemplate.scss
@@ -72,6 +72,7 @@ $tf-filterwidget-shadow-color: $shadow !default;
 		.element {
 			flex-grow: 1;
 			padding: 0;
+			overflow: hidden;
 
 			> div {
 				padding: 0;
